compatibility-tests/compile-fail/tests/ui/duplication-source-from.stderr
error: Multiple `source` attributes are not supported within an enum variant
  --> $DIR/duplication-source-from.rs:10:17
   |
10 |         #[snafu(source(from(EnumError, Box::new)))]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
